[gd_scene load_steps=12 format=3 uid="uid://iqlqp6ur1k8w"]

[ext_resource type="Script" uid="uid://3fbs1buv0idb" path="res://scenes/tile_map_generator.gd" id="1_1eqje"]
[ext_resource type="Texture2D" uid="uid://8okg86avaqq7" path="res://assets/texture/bioime_table.png" id="2_243sj"]
[ext_resource type="Script" uid="uid://dexg8nvs46rav" path="res://scripts/continent_builder.gd" id="2_wugi1"]
[ext_resource type="PackedScene" uid="uid://bgi58isy7n8i5" path="res://scenes/world_tilemap_2d.tscn" id="4_2qe3y"]
[ext_resource type="PackedScene" uid="uid://c5v6x2ndnyahd" path="res://scenes/paint_panel.tscn" id="8_kdi3l"]
[ext_resource type="PackedScene" uid="uid://mlc6yr38r4vq" path="res://scenes/world_assembler_panel.tscn" id="9_qkl76"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jbqbs"]
frequency = 0.042
offset = Vector3(0, 51.72, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_u57ht"]
frequency = 0.1055

[sub_resource type="FastNoiseLite" id="FastNoiseLite_qvodu"]
noise_type = 0
frequency = 0.0552

[sub_resource type="FastNoiseLite" id="FastNoiseLite_yrlek"]
frequency = 0.1055

[sub_resource type="Resource" id="Resource_jpq1i"]
script = ExtResource("2_wugi1")
noise = SubResource("FastNoiseLite_qvodu")
low_freq_noise = SubResource("FastNoiseLite_jbqbs")
temperature_noise = SubResource("FastNoiseLite_yrlek")
moisture_noise = SubResource("FastNoiseLite_u57ht")
biome_table = ExtResource("2_243sj")

[node name="TileMapGenerator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1eqje")
continent_builder = SubResource("Resource_jpq1i")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 600

[node name="SubViewportContainer" type="SubViewportContainer" parent="HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(600, 648)
render_target_update_mode = 4

[node name="world_tilemap" parent="HSplitContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_2qe3y")]
unique_name_in_owner = true

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Control Area"

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuButton_file" type="MenuButton" parent="HSplitContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "File"
item_count = 4
popup/item_0/text = "Save Continent"
popup/item_0/id = 0
popup/item_1/text = "Load Continent"
popup/item_1/id = 1
popup/item_2/text = "Save Continent Generator"
popup/item_2/id = 2
popup/item_3/text = "Load Continent Generator"
popup/item_3/id = 3

[node name="MenuBar" type="MenuBar" parent="HSplitContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="File" type="PopupMenu" parent="HSplitContainer/PanelContainer/VBoxContainer/MenuBar"]
item_count = 4
item_0/text = "Save Continent"
item_0/id = 0
item_1/text = "Load Continent"
item_1/id = 1
item_2/text = "Save Continent Generator"
item_2/id = 2
item_3/text = "Load Continent Generator"
item_3/id = 3

[node name="TabContainer" type="TabContainer" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
current_tab = 1

[node name="Generate" type="VBoxContainer" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate"]
layout_mode = 2
columns = 2

[node name="Label2" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Width"

[node name="spin_width" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Height"

[node name="spin_height" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label4" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Scale X"

[node name="spin_scale_x" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
value = 1.0
allow_greater = true
allow_lesser = true

[node name="Label5" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Scale Y"

[node name="spin_scale_y" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
value = 1.0
allow_greater = true
allow_lesser = true

[node name="Label6" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Warmth"

[node name="spin_warmth" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
value = 1.0
allow_greater = true
allow_lesser = true

[node name="Label7" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Wetness"

[node name="spin_wetness" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
value = 1.0
allow_greater = true
allow_lesser = true

[node name="Label8" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Land Fraction"

[node name="spin_land_fraction" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="Label9" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Mountain Height"

[node name="spin_mountain_height" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="Label10" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Hill Height"

[node name="spin_hill_height" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
layout_mode = 2
text = "Seed"

[node name="spin_seed" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="bn_generate" type="Button" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate"]
layout_mode = 2
text = "Generate
"

[node name="Paint" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer" instance=ExtResource("8_kdi3l")]
unique_name_in_owner = true
layout_mode = 2

[node name="WorldAssembler" parent="HSplitContainer/PanelContainer/VBoxContainer/TabContainer" instance=ExtResource("9_qkl76")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="FileDialog_continent_save" type="FileDialog" parent="."]
unique_name_in_owner = true
filters = PackedStringArray("*.tres")

[node name="FileDialog_generator_save" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
filters = PackedStringArray("*.tres")

[node name="FileDialog_continent_load" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres")

[node name="FileDialog_generator_load" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres")

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[connection signal="gui_input" from="HSplitContainer/SubViewportContainer" to="." method="_on_sub_viewport_container_gui_input"]
[connection signal="id_pressed" from="HSplitContainer/PanelContainer/VBoxContainer/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_width" to="." method="_on_spin_width_value_changed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_height" to="." method="_on_spin_height_value_changed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_scale_x" to="." method="_on_spin_scale_x_value_changed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_scale_y" to="." method="_on_spin_scale_y_value_changed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_warmth" to="." method="_on_spin_warmth_value_changed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_wetness" to="." method="_on_spin_wetness_value_changed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_land_fraction" to="." method="_on_spin_land_fraction_value_changed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_mountain_height" to="." method="_on_spin_mountain_height_value_changed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_hill_height" to="." method="_on_spin_hill_height_value_changed"]
[connection signal="value_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/GridContainer/spin_seed" to="." method="_on_spin_seed_value_changed"]
[connection signal="pressed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Generate/bn_generate" to="." method="_on_bn_generate_pressed"]
[connection signal="edit_mode_changed" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/Paint" to="." method="_on_paint_edit_mode_changed"]
[connection signal="generate_world" from="HSplitContainer/PanelContainer/VBoxContainer/TabContainer/WorldAssembler" to="." method="_on_world_assembler_generate_world"]
[connection signal="file_selected" from="FileDialog_continent_save" to="." method="_on_file_dialog_save_file_selected"]
[connection signal="file_selected" from="FileDialog_generator_save" to="." method="_on_file_dialog_generator_save_file_selected"]
[connection signal="file_selected" from="FileDialog_continent_load" to="." method="_on_file_dialog_load_file_selected"]
[connection signal="file_selected" from="FileDialog_generator_load" to="." method="_on_file_dialog_generator_load_2_file_selected"]
